--- a/Install/Panel_Web/panel_v23/install
+++ b/Install/Panel_Web/panel_v23/install
@@ -13,13 +13,16 @@ apt-get update -y > /dev/null 2>&1
 apt-get install cron curl unzip -y > /dev/null 2>&1
 echo -e "\n\033[1;36mINSTALANDO O APACHE2 \033[1;33mAGUARDE...\033[0m"
 apt-get install apache2 -y > /dev/null 2>&1
-apt-get install php5 libapache2-mod-php5 php5-mcrypt -y > /dev/null 2>&1
-service apache2 restart > /dev/null 2>&1
+apt-get install tasksel php5-mcrypt -y > /dev/null 2>&1
+tasksel install lamp-server > /dev/null 2>&1
+systemctl restart apache2 > /dev/null 2>&1
 echo -e "\n\033[1;36mINSTALANDO O MySQL \033[1;33mAGUARDE...\033[0m"
 echo "debconf mysql-server/root_password password $senha" | debconf-set-selections
 echo "debconf mysql-server/root_password_again password $senha" | debconf-set-selections
-apt-get install mysql-server -y > /dev/null 2>&1
-mysql_install_db > /dev/null 2>&1
+wget https://dev.mysql.com/get/mysql-apt-config_0.8.22-1_all.deb
+sudo apt install ./mysql-apt-config_0.8.22-1_all.deb
+sudo apt update
+sudo apt install mysql-server -y > /dev/null 2>&1 
 (echo $senha; echo n; echo y; echo y; echo y; echo y)|mysql_secure_installation > /dev/null 2>&1
 echo -e "\n\033[1;36mINSTALANDO O PHPMYADMIN \033[1;33mAGUARDE...\033[0m"
 echo "phpmyadmin phpmyadmin/dbconfig-install boolean true" | debconf-set-selections
@@ -29,7 +32,7 @@ echo "phpmyadmin phpmyadmin/mysql/app-pass password $senha" | debconf-set-select
 echo "phpmyadmin phpmyadmin/reconfigure-webserver multiselect apache2" | debconf-set-selections
 apt-get install phpmyadmin -y > /dev/null 2>&1
 php5enmod mcrypt > /dev/null 2>&1
-service apache2 restart > /dev/null 2>&1
+systemctl restart apache2 > /dev/null 2>&1
 ln -s /usr/share/phpmyadmin /var/www/html/phpmyadmin
 apt-get install libssh2-1-dev libssh2-php -y > /dev/null 2>&1
 if [ "$(php -m |grep ssh2)" = "ssh2" ]; then
@@ -41,7 +44,7 @@ else
   exit
 fi
 apt-get install php5-curl > /dev/null 2>&1
-service apache2 restart > /dev/null 2>&1
+systemctl restart apache2 > /dev/null 2>&1
 clear
 echo ""
 echo -e "\033[1;31m ATENCAO \033[1;33m!!!"
@@ -78,7 +81,7 @@ else
     rm /root/install.sh > /dev/null 2>&1
     exit
 fi
-service apache2 restart > /dev/null 2>&1
+systemctl restart apache2 > /dev/null 2>&1
 clear
 echo '* * * * * root /usr/bin/php /var/www/html/pages/system/cron.php' >> /etc/crontab
 echo '* * * * * root /usr/bin/php /var/www/html/pages/system/cron.ssh.php ' >> /etc/crontab
@@ -91,7 +94,7 @@ echo '*/30 * * * * root /usr/bin/php /var/www/html/pages/system/cron.limpeza.php
 chmod 777 /var/www/html/admin/pages/servidor/ovpn
 chmod 777 /var/www/html/admin/pages/download
 chmod 777 /var/www/html/admin/pages/faturas/comprovantes
-service apache2 restart > /dev/null 2>&1
+systemctl restart apache2 > /dev/null 2>&1
 clear
 echo -e "\033[1;32m PAINEL-SSH INSTALADO COM SUCESSO!"
 echo ""
