--- a/Install/Panel_Web/panel_v23/install
+++ b/Install/Panel_Web/panel_v23/install
@@ -30,11 +30,11 @@ echo "phpmyadmin phpmyadmin/app-password-confirm password $senha" | debconf-set-
 echo "phpmyadmin phpmyadmin/mysql/admin-pass password $senha" | debconf-set-selections
 echo "phpmyadmin phpmyadmin/mysql/app-pass password $senha" | debconf-set-selections
 echo "phpmyadmin phpmyadmin/reconfigure-webserver multiselect apache2" | debconf-set-selections
-apt-get install phpmyadmin -y > /dev/null 2>&1
-php5enmod mcrypt > /dev/null 2>&1
-systemctl restart apache2 > /dev/null 2>&1
+apt-get install phpmyadmin -y 
+php5enmod mcrypt 
+systemctl restart apache2 
 ln -s /usr/share/phpmyadmin /var/www/html/phpmyadmin
-apt-get install libssh2-1-dev libssh2-php -y > /dev/null 2>&1
+apt-get install libssh2-1-dev libssh2-php -y 
 if [ "$(php -m |grep ssh2)" = "ssh2" ]; then
   true
 else
